--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -44,7 +44,7 @@
     --code-color: #94a3b8;
     
     /* Border & Input Colors */
-    --border-color: #334155;
+    --border-color: #475569;
     --input-border: #475569;
     --input-bg: #1e293b;
     
